Actualizo Hoja de V

--- a/index.html
+++ b/index.html
@@ -72,11 +72,15 @@ En resumen, mi nombre es Daniel Sánchez Rojas, y mi vida se caracteriza por la 
  <p>Cedula: 1017222646</p>
  <p>Cel: 3155290663</p>
  <p>📧Correo: odsanchezro@cesde.net</p>
+ <p>Cel: 3332852694</p>
+ <p>📧Correo: daniiellssaann@gmail.com</p>
 
                 </div>
                 <div class="intro-right">
                   <img src="img/Imag/perfil.jpg" alt="Image" class="img-fluid intro-img-1">
                   <img src="img/Imag/perfil2.jpg" alt="Image" class="img-fluid intro-img-2">
+                  <img src="img/Imag/yo1.jpeg" alt="Image" class="img-fluid intro-img-1">
+                  <img src="img/Imag/yo.jpeg" alt="Image" class="img-fluid intro-img-2">
                 </div>
                 <div class="circle intro-circle-1"></div>
                 <div class="circle intro-circle-2"></div>
@@ -93,92 +97,84 @@ En resumen, mi nombre es Daniel Sánchez Rojas, y mi vida se caracteriza por la 
           <li data-page-no="2">
             <!-- Image Carousel -->
             <div class="mx-auto position-relative gallery-container">
-              <div class="circle intro-circle-1"></div>
-              <div class="circle intro-circle-2"></div>
-              <div class="mx-auto tm-border-top gallery-slider">
-                <figure class="effect-julia item">
-                    <img src="img/Imag/familia1.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Esta es mi Familia completa</p>
-                        </div>
-                        <a href="img/Imag/familia1.jpg">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/Imag/familia3.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Ella es mi Hija Emily</p>
-                        </div>
-                        <a href="img/Imag/familia3.jpg">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/Imag/familia2.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Ella es mi Hija Alicia</p>
-                        </div>
-                        <a href="img/Imag/familia2.jpg">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/Imag/familia7.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Ella es mi Hija Amelia</p>
-                        </div>
-                        <a href="img/Imag/familia7.jpg">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/Imag/familia4.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Ella es mi Hija Mi Esposa</p>
-                        </div>
-                        <a href="img/Imag/familia4.jpg">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/Imag/familia6.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Mi motivo de lucha</p>
-                        </div>
-                        <a href="img/Imag/familia6.jpg">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/Imag/familia5.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Amo su Humildad</p>
-                        </div>
-                        <a href="img/Imag/familia5.jpg">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/Imag/familia8.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>Momentos de Vida</p>
-                        </div>
-                        <a href="img/Imag/familia8.jpg">View more</a>
-                    </figcaption>
-                </figure>
-                <figure class="effect-julia item">
-                    <img src="img/Imag/familia9.jpg" alt="Image">
-                    <figcaption>
-                        <div>
-                            <p>My Love</p>
-                        </div>
-                        <a href="img/Imag/familia9.jpg">View more</a>
-                    </figcaption>
-                </figure>
-              </div>
-            </div>
+  <div class="circle intro-circle-1"></div>
+  <div class="circle intro-circle-2"></div>
+  <div class="mx-auto tm-border-top gallery-slider">
+    
+    <figure class="effect-julia item">
+      <img src="img/Imag/familia1.jpg" alt="Image">
+      <figcaption>
+        <div><p>Esta es mi Familia completa</p></div>
+        <a href="img/Imag/familia1.jpg" data-lightbox="galeria" data-title="Esta es mi Familia completa">View more</a>
+      </figcaption>
+    </figure>
+
+    <figure class="effect-julia item">
+      <img src="img/Imag/familia3.jpg" alt="Image">
+      <figcaption>
+        <div><p>Ella es mi Hija Emily</p></div>
+        <a href="img/Imag/familia3.jpg" data-lightbox="galeria" data-title="Ella es mi Hija Emily">View more</a>
+      </figcaption>
+    </figure>
+
+    <figure class="effect-julia item">
+      <img src="img/Imag/familia2.jpg" alt="Image">
+      <figcaption>
+        <div><p>Ella es mi Hija Alicia</p></div>
+        <a href="img/Imag/familia2.jpg" data-lightbox="galeria" data-title="Ella es mi Hija Alicia">View more</a>
+      </figcaption>
+    </figure>
+
+    <figure class="effect-julia item">
+      <img src="img/Imag/familia7.jpg" alt="Image">
+      <figcaption>
+        <div><p>Ella es mi Hija Amelia</p></div>
+        <a href="img/Imag/familia7.jpg" data-lightbox="galeria" data-title="Ella es mi Hija Amelia">View more</a>
+      </figcaption>
+    </figure>
+
+    <figure class="effect-julia item">
+      <img src="img/Imag/familia4.jpg" alt="Image">
+      <figcaption>
+        <div><p>Ella es mi Esposa</p></div>
+        <a href="img/Imag/familia4.jpg" data-lightbox="galeria" data-title="Ella es mi Esposa">View more</a>
+      </figcaption>
+    </figure>
+
+    <figure class="effect-julia item">
+      <img src="img/Imag/familia6.jpg" alt="Image">
+      <figcaption>
+        <div><p>Mi motivo de lucha</p></div>
+        <a href="img/Imag/familia6.jpg" data-lightbox="galeria" data-title="Mi motivo de lucha">View more</a>
+      </figcaption>
+    </figure>
+
+    <figure class="effect-julia item">
+      <img src="img/Imag/familia5.jpg" alt="Image">
+      <figcaption>
+        <div><p>Amo su Humildad</p></div>
+        <a href="img/Imag/familia5.jpg" data-lightbox="galeria" data-title="Amo su Humildad">View more</a>
+      </figcaption>
+    </figure>
+
+    <figure class="effect-julia item">
+      <img src="img/Imag/familia8.jpg" alt="Image">
+      <figcaption>
+        <div><p>Momentos de Vida</p></div>
+        <a href="img/Imag/familia8.jpg" data-lightbox="galeria" data-title="Momentos de Vida">View more</a>
+      </figcaption>
+    </figure>
+
+    <figure class="effect-julia item">
+      <img src="img/Imag/familia9.jpg" alt="Image">
+      <figcaption>
+        <div><p>My Love</p></div>
+        <a href="img/Imag/familia9.jpg" data-lightbox="galeria" data-title="My Love">View more</a>
+      </figcaption>
+    </figure>
+
+  </div>
+</div>
           </li>
           <li data-page-no="3" class="px-3">
             <div class="position-relative page-width-1 page-right tm-border-top tm-border-bottom">
@@ -232,9 +228,11 @@ En resumen, mi nombre es Daniel Sánchez Rojas, y mi vida se caracteriza por la 
                   
                   <div>
                     <h2><a href="https://www.informacolombia.com/directorio-empresas/informacion-empresa/surtialimentos-sas" target="_blank">SurtiAlimentos</a></h2> Operario de Producción
+                    <h2><a href="https://co.linkedin.com/company/tabasco-oc" target="_blank">Claro Tabasco S.A.</a></h2> Medidor de Fibra Optica
                   </div>
                   <div class="tm-mb-45">
                     <h2><a href="http://clubelrodeo.co/" target="_blank">Club el Rodeo</a></h2> Entrenador Deportivo - Recreacionista 
+                    <h2><a href="http://surinter.com.co/" target="_blank">Surinter - Comunicaciones</a></h2> Medios Tecnologicos 
                   </div>
                   <div>
                     <h2><a href="https://gruponutresa.com/negocios/grupos-de-alimentos-y-negocios-carnicos/" target="_blank">AlimentosCarnicos</a></h2> Operario de Producción
